# dicktaint

./: .gitignore  CHANGELOG.md  README.md  package.json  server.js
.github/workflows/: release-macos.yml
docs/: README.md  api-surface.md  background-hotkey-mvp.md  macos-private-api-checklist.md  native-dictation.md
llm/: README.md  STANDARDS.md
llm/context/: CURRENT_STATE.md  PLATFORM_SUPPORT.md  RUNTIME_MODES.md  USER_FLOWS.md
llm/implementation/: API_SURFACE.md  CONFIG_AND_PATH_RESOLUTION.md  FRONTEND_RUNTIME_BEHAVIOR.md  HOTKEY_AND_OVERLAY.md  MODEL_MANAGEMENT.md  NATIVE_DESKTOP_DICTATION.md  WEB_SERVER_MODE.md
llm/workflow/: DOCS_VERIFICATION.md  LOCAL_DEVELOPMENT.md  MACOS_PRIVATE_API_POLICY.md  RELEASE_AND_DISTRIBUTION.md  SMOKE_TESTS.md  TROUBLESHOOTING.md
public/: app.js  dictation-logic.js  index.html  pill.css  pill.html  pill.js  styles.css
scripts/: build-whisper-sidecar.sh  smoke-whisper-sidecar.sh  verify-docs.sh
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/binaries/: README.md  whisper-cli-aarch64-apple-darwin  whisper-cli-x86_64-apple-darwin  whisper-cli-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json  pill.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: dictation-frontend.test.js  dictation-logic.test.js  release-config.test.js  server.test.js
