[package]
name = "dicktaint"
version = "0.1.0"
description = "Local dictation starter with native Whisper CLI transcription"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cpal = "0.15"
hound = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSEvent", "block2"] }
